[package]
name = "get-selected-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
enigo = "0.1.3"
parking_lot = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
macos-accessibility-client = "0.0.1"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
accessibility = { git = "https://github.com/yetone/accessibility", branch = "sync" }
accessibility-sys = "0.1.3"

