[package]
name = "get-selected-text"
version = "0.1.0"
edition = "2021"
authors = ["yetone <yetoneful@gmail.com>"]
license = "MIT / Apache-2.0"
homepage = "https://github.com/yetone/get-selected-text"
repository = "https://github.com/yetone/get-selected-text"
description = "A tiny Rust library that allows you to easily obtain selected text across all platforms (macOS, Windows, Linux)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
enigo = "0.1.3"
parking_lot = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
macos-accessibility-client = "0.0.1"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1.3"

